--- a/FacturacionPrimeraEntregaLetticugna_Clase11_RestAPI II/src/main/resources/application.properties
+++ b/FacturacionPrimeraEntregaLetticugna_Clase11_RestAPI II/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#Ubicaci?n de la db (puede ser en memoria o en archivo, recomendable en archivo as? persiste)
+#Ubicación de la db (puede ser en memoria o en archivo, recomendable en archivo así persiste)
 #La segunda configuracion DATABASE_TO_UPPER deshabilita que se transforme todo en mayusculas
 spring.datasource.url=jdbc:h2:file:./data/coderHouse;DATABASE_TO_UPPER=false
 
-#El driver que utilizar? la fuente de datos y el dialecto de jpa
+#El driver que utilizará la fuente de datos y el dialecto de jpa
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
@@ -27,11 +27,8 @@ spring.h2.console.path=/h2-console
 #Esperar a que cargue hibernate antes de acceder a schema-anulado.sql
 spring.jpa.defer-datasource-initialization=true
 
-#Para inicializar la base de datos con los scripts definidos en schema-anulado.sql. S?lo inicializar una vez.
+#Para inicializar la base de datos con los scripts definidos en schema-anulado.sql. Sólo inicializar una vez.
 #spring.sql.init.mode=always
 
 #No sincronizar las clases definidas en las entidades con la base de datos existente.
 spring.jpa.hibernate.ddl-auto=create-drop
-
-#es para que NO se inicialice automaticamente con las clases que tenemos en el proyecto
-#spring.jpa.hibernate.dll-auto=none
