--- a/ClientApiRestLetticugna/pom.xml
+++ b/ClientApiRestLetticugna/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.0.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu.coderhouse</groupId>
 	<artifactId>ClientApiRestLetticugna</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ClientApiRestLetticugna</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Desafio Cliente API Rest</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
